--- a/web/index.html
+++ b/web/index.html
@@ -27,8 +27,8 @@
           <div class="tab">
             <input type="radio" name="css-tabs" id="scripttab" checked class="tab-switch">
             <label for="scripttab" class="tab-label">script.py</label>
-            <div class="tab-content" id="scriptdiv"> 
-              <textarea id="scriptpy" style="float:left; width:100%; height:100%">
+            <div class="tab-content" id="scriptdiv">
+              <textarea id="scriptpy" style="float:left; width:100%; height:90%">
 import numpy as np
 from genie_python import genie as g
 import inst
@@ -39,13 +39,19 @@ def runscript():
         g.begin()
         g.change_title(f'Some random sample - {tt}K')
         g.waitfor(uamps = 750)
-        g.end()</textarea>
+        g.end()
+              </textarea>
+              <div style="height: 10%">
+                <input type="file" id="upload" name="upload" accept=".py,text/plain" style="height:100%" />
+                <button id="upload-button">Upload</button>
+              </div>
             </div>
+
           </div>
           <div class="tab">
             <input type="radio" name="css-tabs" id="configtab" class="tab-switch">
             <label for="configtab" class="tab-label">config.json</label>
-            <div class="tab-content" id="configdiv"> 
+            <div class="tab-content" id="configdiv">
               <textarea id="configjson" style="float:left; width:100%; height:100%">
 {
     "time": {
